<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1title">Question 1</string>
    <string name="question2title">Question 2</string>
    <string name="question3title">Question 3</string>
    <string name="question4title">Question 4</string>
    <string name="question5title">Question 5</string>
    <string name="question6title">Question 6</string>
    <string name="question7title">Question 7</string>
    <string name="question8title">Question 8</string>
    <string name="question9title">Question 9</string>
    <string name="question10title">Question 10</string>
    <string name="question1">Who is the President of Nigeria?</string>
    <string name="answerOlu">Olusegun Obasanjo</string>
    <string name="answerBu">Muhammadu Buhari</string>
    <string name="answerAtiku">Atiku Abubakar</string>
    <string name="question2">When is Democracy Day in Nigeria?</string>
    <string name="answerJun">June 12</string>
    <string name="answerFeb">February 14</string>
    <string name="answerMay">May 29</string>
    <string name="question3">What\'s is the Capital of Nigeria?</string>
    <string name="nameHint">Capital City</string>
    <string name="question4">Who is the curent CBN Governor?</string>
    <string name="answerGwin">Godwin Emefiele</string>
    <string name="answerLam">Lamido Sanusi</string>
    <string name="answerChar">Charles Soludo</string>
    <string name="question5">Which are the Branches of Government in Nigeria?</string>
    <string name="answerLeg">Legislative branch</string>
    <string name="answerJudicial">Judicial branch</string>
    <string name="answerElection">Election branch</string>
    <string name="answerExec">Executive branch</string>
    <string name="answerMerchant">Merchant branch</string>
    <string name="answerArmy">The Army branch</string>
    <string name="question6">Who is the current Minister of Defence?</string>
    <string name="answerFas">Fashola Babatunde</string>
    <string name="answerMan">Mansur Mohammed Dan Ali</string>
    <string name="answerAliyu">Aliyu Mohammed Gusau</string>
    <string name="question7">Who is the current Minister of Petroleum?</string>
    <string name="answerEmma">Emmanuel Ibe Kachikwu</string>
    <string name="answerMBu">Muhammadu Buhari</string>
    <string name="answerMaika">Maikanti Baru</string>
    <string name="question8">Who is the Minister of Information?</string>
    <string name="answerSolo"> Solomon Dalong</string>
    <string name="answerUsm">Abubakar Usman</string>
    <string name="answerLai">Lai Mohammed</string>
    <string name="question9">How many local Governments do we have in Nigeria??</string>
    <string name="answer773">773</string>
    <string name="answerW780">780</string>
    <string name="answer774">774</string>
    <string name="question10"> When was the Nigerian Naira introduced??</string>
    <string name="answerJan73">1st January 1973</string>
    <string name="answerFeb74">14 Febuary 1974</string>
    <string name="answerOct60">1st October 1960</string>
    <string name="submit">Submit</string>
</resources>
